<resources>
    <string name="app_name">ViteMaDose</string>
    <string name="find_dose_easily_and_quickly">Trouvez une dose de vaccin facilement et rapidement</string>
    <string name="share_description">Trouvez une dose de vaccin facilement et rapidement avec ViteMaDose https://vitemadose.page.link/jdF1</string>
    <string name="choose_department_title">Commune, code postal, département</string>
    <string name="make_appointment">Prendre rendez-vous</string>
    <string name="call_center">Appeler le %s</string>
    <string name="bookmark_notification_chronodose">Suivi avec notifications chronodose</string>
    <string name="bookmark_notification">Suivi avec notifications</string>
    <string name="bookmark_favorite">Suivi</string>
    <string name="bookmark_none">Non suivi</string>
    <string name="sort_by_date">Au plus tôt</string>
    <string name="sort_by_proximity">Au plus proche</string>
    <string name="tag_type_first_shot">Première\ndose</string>
    <string name="tag_type_third_shot">Dose de\nrappel</string>
    <string name="tag_type_kid">5-11\nans</string>
    <string name="last_updated">Dernière mise à jour : %s</string>
    <plurals name="centers">
        <item quantity="one">lieu\nde vaccination</item>
        <item quantity="other">lieux\nde vaccination</item>
    </plurals>
    <plurals name="center_ratio_disponibilities">
        <item quantity="one">de lieu avec\ndes disponibilités</item>
        <item quantity="other">de lieux avec\ndes disponibilités</item>
    </plurals>
    <plurals name="center_disponibilities">
        <item quantity="one">lieu avec\ndes disponibilités</item>
        <item quantity="other">lieux avec\ndes disponibilités</item>
    </plurals>
    <plurals name="slot_disponibilities">
        <item quantity="one">créneau\ndisponible</item>
        <item quantity="other">créneaux\ndisponibles</item>
    </plurals>
    <plurals name="chronodose_disponibilities">
        <item quantity="one">chronodose\ndisponible</item>
        <item quantity="other">chronodoses\ndisponibles</item>
    </plurals>
    <plurals name="shot_disponibilities">
        <item quantity="one">%s créneau</item>
        <item quantity="other">%s créneaux</item>
    </plurals>
    <plurals name="shot_disponibilities_found">
        <item quantity="one">%s créneau trouvé</item>
        <item quantity="other">%s créneaux trouvés</item>
    </plurals>
    <string name="disponibilities_placeholder">%s Lieux avec des disponibilités</string>
    <string name="appointment_by_phone_only">RDV par tél uniquement</string>
    <string name="no_slots_available">Aucun RDV détecté</string>
    <string name="check_center">Consulter ce lieu</string>
    <string name="partner_placeholder">avec</string>
    <string name="supported_platforms_title">Trouvez vos rendez-vous avec</string>
    <string name="centers_error">Erreur lors de la récupération des lieux. Réessayez</string>
    <string name="search_error">Erreur lors de la récupération des suggestions. Réessayez</string>
    <string name="no_app_activity_found">Aucune application trouvée.</string>
    <string name="about">À propos</string>
    <string name="bookmark">Centres suivis</string>
    <string name="liens">Liens</string>
    <string name="stats">Statistiques</string>
    <string name="disclaimer">Vite Ma Dose n\'est pas un outil officiel, n\'est pas exhaustif et ne remplace pas une recherche manuelle notamment dans le cas où aucun créneau de vaccination disponible n’est proposé sur notre application.</string>
    <string name="carte_des_centres">Carte des centres</string>
    <string name="read_oss"><u>Consulter les licenses open sources</u></string>
    <string name="vaccintracker">VaccinTracker</string>
    <string name="share">Partager</string>
    <string name="faq">FAQ</string>
    <string name="newSystem">Mode Calendrier</string>
    <string name="contributors">Contributeurs</string>
    <string name="contributors_description">ViteMaDose est un project <font color="#AE50C2">opensource</font>,construit par ses <font color="#DC5A60">génereux contributeurs </font>:</string>

    <string name="app_update_downloading">Téléchargement de la mise à jour…</string>
    <string name="app_update_pending">Préparation de la mise à jour.</string>
    <string name="app_update_downloaded">Mise à jour téléchargée. Veuillez redémarrer ViteMaDose.</string>
    <string name="bookmark_empty_state_none">"Aucun centre suivi"</string>
    <string name="bookmark_empty_state_favorite">"Suivez vos centres pour les retrouver plus facilement"</string>
    <string name="bookmark_empty_state_notification">"Recevez une notification lorsque les centres sont de nouveau disponibles"</string>
    <string name="bookmark_empty_state_notification_chronodose">"Soyez alerté lors de la disponibilité de chronodoses"</string>
    <string name="notification">Notification</string>
    <string name="notification_disclaimer_title">Note</string>
    <string name="notification_chronodose_disclaimer_message">Vous recevrez une notification à chaque fois que le centre proposera <b>de nouveau des chronodoses</b>.\n\nNous ne pouvons pas vous garantir la disponibilité du centre lors de votre consultation.</string>
    <string name="notification_disclaimer_message">Vous recevrez une notification à chaque fois que le centre sera <b>de nouveau disponible</b> à la réservation <b>quel que soit le type de créneau</b>.\n\nNous ne pouvons pas vous garantir la disponibilité du centre lors de votre consultation.</string>
    <string name="notification_disclaimer_compris">J\'ai compris</string>
    <string name="notification_disclaimer_cancel">Annuler</string>
    <string name="notification_disable_notifications">Arrêter notifications</string>
    <string name="notification_channel_name">Disponibilités</string>
    <string name="notification_channel_description">Nouvelles disponibilités dans vos centres suivis avec notifications</string>
    <string name="notification_chronodose_channel_name">Chronodoses</string>
    <string name="notification_chronodose_channel_description">Nouvelles chronodoses disponibles dans vos centres suivis avec notifications</string>
    <string name="activate_notifs">activer les notifications</string>
    <string name="notifications_chronodose_activated">notifications chronodose activées</string>
    <string name="notifications_activated">notifications activées</string>
    <string name="empty_string" />
    <string name="filters_title">Filtrer les résultats</string>
    <string name="filter_distance">Distance</string>
    <string name="filter_vaccine_type">Types de vaccins</string>
    <string name="filter_chronodose_only">Chronodoses uniquement</string>
    <string name="filter_available_centers_only">Centres disponibles uniquement</string>
    <string name="validate">valider</string>
    <string name="cancel">annuler</string>
    <string name="apply">appliquer</string>
    <string name="chronodoses_disponibles">Chronodoses disponibles</string>
    <string name="chronodose_onboarding_title">Chronodoses</string>
    <string name="chronodose_onboarding_message">Les chronodoses sont des doses de vaccin réservables à court terme et sans critère d\'éligibilité.\n</string>
    <string name="chronodose_onboarding_message_2">Les centres disposant de chronodoses sont affichés avec un bandeau rouge comme ci-dessous :</string>
    <string name="reset_filters">Réinitialiser les filtres</string>
    <string name="continuer">Continuer</string>
    <string name="before_going_further">Avant d\'aller plus loin</string>
    <string name="qu_est_ce_qu_une_chronodose">Qu\'est ce qu\'une chronodose ?</string>
    <string name="on_boarding_bookmark_tips">Vous pouvez être alertés de leurs disponibilités en activant les notifications</string>

    <!--Accessibility (a11y)-->
    <string name="a11y_doctolib_maiia_ordoclic_keldoc">Doctolib - Maiia - Ordoclic - Keldoc</string>
    <string name="a11y_appointment_show_all_informations">Afficher plus d\'informations</string>
    <string name="a11y_add_to_bookmarked">Configurer le suivi de ce centre</string>
    <string name="a11y_hide_disclaimer_message">Masquer ce message d\'alerte</string>
    <string name="a11y_filter_results">Filtrer les résultats</string>
    <string name="no_center_to_display">Aucun centre à afficher</string>
    <string name="a11y_more_informations">Plus d\'informations</string>
    <string name="a11y_see_bookmarked">Voir mes centres suivis</string>
    <string name="a11y_on_boarding_bookmark_tips_message">Vous pourrez être alerté de leurs disponibilités en appuyant sur le bouton nommé : Configurer le suivi de ce centre</string>
    <string name="a11y_on_boarding_chronodose_available_label">Vous reconnaitrez une chronodose grâce au libellé : Chronodoses disponibles</string>
</resources>
