<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/notificationView"
        android:paddingVertical="16dp"
        android:layout_marginEnd="8dp"
        style="@style/TextStyle_baseline_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_notifications_24dp"
        android:drawableTint="?android:attr/textColorPrimary"
        android:includeFontPadding="false"
        android:text="@string/bookmark_notification" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/favoriteView"
        android:layout_marginEnd="8dp"
        android:paddingVertical="16dp"
        style="@style/TextStyle_baseline_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_bookmark_24dp"
        android:drawableTint="?android:attr/textColorPrimary"
        android:includeFontPadding="false"
        android:text="@string/bookmark_favorite" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noneView"
        android:layout_marginEnd="8dp"
        android:paddingVertical="16dp"
        style="@style/TextStyle_baseline_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_bookmark_border_24_dp"
        android:drawableTint="?android:attr/textColorPrimary"
        android:includeFontPadding="false"
        android:text="@string/bookmark_none" />


</LinearLayout>