<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/beforeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                android:text="@string/before_going_further"
                style="@style/TextStyle_header"
                android:gravity="center"
                android:padding="30sp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chronodoses_message"
                style="@style/TextStyle_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/chronodose_onboarding_message"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/beforeTitle"
                android:layout_margin="16dp"
                android:background="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chronodoses_message_2"
                style="@style/TextStyle_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/chronodose_onboarding_message_2"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/chronodoses_message" />



            <TextView
                android:id="@+id/chronodoseTitleView"
                android:drawableStart="@drawable/ic_lightning_charge_fill"
                android:drawableEnd="@drawable/ic_lightning_charge_fill"
                android:drawableTint="?attr/chronodoseTextColor"
                android:background="?attr/chronodoseBackgroundColor"
                android:includeFontPadding="false"
                android:gravity="center"
                android:text="@string/chronodoses_disponibles"
                android:textColor="?attr/chronodoseTextColor"
                android:fontFamily="@font/sf_pro_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="50dp"
                android:paddingVertical="4dp"
                app:layout_constraintTop_toBottomOf="@id/chronodoses_message_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


        <Button
            android:id="@+id/continueAfterOnBoarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continuer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chronodoseTitleView"
            app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>