<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emptyStateContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:visibility="visible">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/emptyStateLogoView"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vmd_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emptyStateBaselineTextView"
        style="@style/TextStyle_baseline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/find_dose_easily_and_quickly"
        app:layout_constraintTop_toBottomOf="@id/emptyStateLogoView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/emptyStateDepartmentSelector"
        style="@style/CustomCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyStateBaselineTextView"
        app:layout_constraintWidth_max="300dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/RegularTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:hintEnabled="false">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/emptyStateSelectedDepartment"
                android:gravity="start"
                android:imeOptions="actionSearch"
                style="@style/TextStyle_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1000"
                android:ellipsize="end"
                android:hint="@string/choose_department_title"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                tools:text="04 - Alpes de Haute-Provence" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/emptyStateDepartmentSelector"
        android:id="@+id/emptyStatePartnersTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/sf_pro"
        android:gravity="center"
        android:text="@string/supported_platforms_title"
        android:textColor="@color/grey_10"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/emptyStateLogoPartners" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/emptyStateLogoPartners"
        android:alpha="0.5"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        app:layout_constraintHeight_default="wrap"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/emptyStatePartnersTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/logo_partners"
        android:contentDescription="@string/a11y_doctolib_maiia_ordoclic_keldoc"/>

</androidx.constraintlayout.widget.ConstraintLayout>